Added UVT algorithm and completed MVP

--- a/WebContent/app/fragment/fragmentList/fragmentList.component.html
+++ b/WebContent/app/fragment/fragmentList/fragmentList.component.html
@@ -4,6 +4,7 @@
 	<input class="form-control" placeholder="End Time" ng-model="fragment.endTime">
 	<input class="btn btn-default" type="submit" value="Add" ng-click="vm.add(fragment); fragment={};">
 </form>
+<button class="btn btn-warning" ng-click="vm.clearFragments();">Clear List</button>
 <table class="table-bordered table-condensed">
 	<tr>
 		<th>Start Time</th>
@@ -14,3 +15,6 @@
 		<td><input ng-model="fragment.endTime"></td>
 	</tr>
 </table>
+<button class="btn btn-success" ng-click="vm.calculateUVT();">Calculate UVT</button>
+<input ng-model="vm.uvt" disabled>
+
