Added some styling

--- a/WebContent/app/appModule/appComponent/app.component.html
+++ b/WebContent/app/appModule/appComponent/app.component.html
@@ -1,2 +1,4 @@
+<div class="container-fluid">
 <h1>Unique View Time Calculator</h1>
 <fragment-list>Loading fragment list ... </fragment-list>
+</div>
